syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "PixKeymanagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup;

service PixKeymanagerGrpcService {
  rpc registra (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

service PixDeletaService {
  rpc deleta (DeletaChaveRequest) returns (DeletaChaveResponse){}
}

service PixConsultaChaveService {
  rpc consulta (ConsultaChaveRequest) returns (ConsultaChaveResponse){}
}

service PixListaChavesService {
  rpc lista (ListaChavesRequest) returns (ListaChavesResponse){}
}

enum TipoDeChave {
  DESCONHECIDO = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoDeConta{
  DESCONHECIDO_TIPO = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RegistraChavePixRequest {
  string clienteId = 1;
  TipoDeChave tipoDeChave = 2;
  string chave = 3;
  TipoDeConta tipoDeConta = 4;
}

message RegistraChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}

message DeletaChaveRequest{
  string pixId = 1;
  string clienteId = 2;
}

message DeletaChaveResponse{
  string clienteId = 1;
  string pixId = 2;
}

message ConsultaChaveRequest{
  message FiltroPorPixId{
    string clienteId = 1;
    string pixId = 2;
  }

  oneof filtro{
    FiltroPorPixId pixId = 1;
    string chave = 2;
  }
}

message ConsultaChaveResponse{

  message ChavePix{

    message ContaInfo{
      TipoDeConta tipo = 1;
      string instituicao = 2;
      string nomeDoTitular = 3;
      string cpfDoTitular = 4;
      string agencia = 5;
      string numeroDaConta = 6;
    }

    TipoDeChave tipo = 1;
    string chave = 2;
    ContaInfo conta = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }

  string clienteId = 1;
  string pixId = 2;
  ChavePix chave = 3;

}

message ListaChavesRequest{
  string clienteId = 1;
}

message ListaChavesResponse{
  message ChavePix{
    string pixId = 1;
    TipoDeChave tipo = 2;
    string chave = 3;
    TipoDeConta tipoDeConta = 4;
    google.protobuf.Timestamp criadaEm = 5;
  }
  string clienteId = 1;
  repeated ChavePix chaves= 2;
}